# legend

./: .editorconfig  Cargo.toml  Rocket.toml  docker-compose.yml  schema.graphql  sqlx-data.json
migrations/: 20210329152428_create_posts.up.sql
migrations/2021-03-27-155017_create_posts/: up.sql
src/: api.rs  database.rs  db.rs  error.rs  gql.rs  graphql_rocket.rs  main.rs  post.rs  utils.rs
src/api/: graphql.rs  posts.rs
src/models/: post.rs
