[package]
name = "legend"
version = "0.1.0"
authors = ["Hugo Saracino <hugo.saracino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "2.7", features = ["tracing"] }
dotenv = "0.15"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["offline", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0"
tokio-util = { version = "0.6.5", default-features = false, features = ["compat"] }
tracing = "0.1"

[dependencies.color-eyre]
version = "0.5"
default-features = false
features = ["tracing-error"]

[dependencies.rocket]
git = "https://github.com/jebrosen/Rocket"
branch = "tracing-rebase-202103"
default-features = false

[dependencies.rocket_contrib]
git = "https://github.com/jebrosen/Rocket"
branch = "tracing-rebase-202103"
default-features = false
features = ["json"]
